Improved some UI aspects in SettingsWindow and data display in fields
Text in ComboBox now trims spaces more evenly
Data in settingWindow is now displayed as saved
QLineEdit for settings got setValidator(QIntValidator()) to allow only integer input

tab_open_style_value and language_preference_value now store the index of the element from TAB_OPEN_STYLE_OPTIONS and LANGUAGE_PREFERENCE_OPTIONS instead of the name in str, improving JSON readability; other elements will need manual adjustment if needed
Validation and reset to defaults have been updated

SettingsWindow.add_row(), make_resizable_lineedit(), make_dynamic_combobox() moved out of init_ui() for better readability of the interface

--- a/qt5ui/style/settingswindow.css
+++ b/qt5ui/style/settingswindow.css
@@ -17,7 +17,6 @@ QLineEdit:focus {
 
 /* QComboBox - flat white, centered text */
 QComboBox {
-    text-align: center; 
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 5px 10px;
@@ -36,12 +35,12 @@ QComboBox::drop-down {
 }
 
 /* dropdown items */
-QComboBox::item { 
+QComboBox QListView::item { 
     text-align: center; 
 }
 
 
-/* flat square */
+/* flat square checkbox */
 QCheckBox {
     spacing: 5px;
     font-size: 16px;
@@ -52,7 +51,7 @@ QCheckBox::indicator {
     height: 20px;
     border: 2px solid #ccc;
     border-radius: 10px; 
-    background-color: #1E1E1E
+    background-color: #1E1E1E;
 }
 
 QCheckBox::indicator:checked {
